fixed problem with anchors y overflow-x
It is not very elegant, but it worked

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,10 @@
 html,
 body {
     height: 100%;
+
+}
+.overflowed{
+	overflow-x: hidden;
 }
 
 body {
